@@ -200,8 +200,11 @@ define('_AM_XNEWSLETTER_SUBSCR_LASTNAME',"Last name");
 define('_AM_XNEWSLETTER_SUBSCR_UID',"Member name");
 define('_AM_XNEWSLETTER_SUBSCR_SEX',"Salutation");
 define('_AM_XNEWSLETTER_SUBSCR_SEX_EMPTY',"");
+define('_AM_XNEWSLETTER_SUBSCR_SEX_BOY',"Mstr.");
 define('_AM_XNEWSLETTER_SUBSCR_SEX_MALE',"Mr.");
+define('_AM_XNEWSLETTER_SUBSCR_SEX_GIRL',"Ms.");
 define('_AM_XNEWSLETTER_SUBSCR_SEX_FEMALE',"Mrs.");
+define('_AM_XNEWSLETTER_SUBSCR_SEX_DOCTOR',"Dr.");
 define('_AM_XNEWSLETTER_SUBSCR_SEX_FAMILY',"Family");
 define('_AM_XNEWSLETTER_SUBSCR_SEX_COMP',"Company");
 define('_AM_XNEWSLETTER_SUBSCR_SUBMITTER',"Submitter");
